samples/_failures_safe/1761660214_0133e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96074459.c: In function ‘main’:
./samples/SAFE/__tmp_96074459.c:161:13: error: expected expression at end of input
  161 |             if (
      |             ^~
./samples/SAFE/__tmp_96074459.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96074459.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_96074459.c:161:13: error: expected declaration or statement at end of input
